dev-mods-simple-agent-sampling: updated file node handling for SampleSRM.