@@ -9,6 +9,7 @@ import java.util.EnumMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -180,7 +181,7 @@ public abstract class Simulation {
         }
     }
 
-    private void populateFileNodes() {
+    protected void populateFileNodes() {
         String type = "DSV";
         String delimiter = ",";
         for (String fileName : getFiles()) {
@@ -189,7 +190,9 @@ public abstract class Simulation {
     }
 
     private List<String> getFiles() {
-        return List.of(INITIAL_FILE_NAME);
+        return Stream.concat(List.of(INITIAL_FILE_NAME).stream(), 
+        Optional.ofNullable(request.files()).orElse(Collections.emptyList()).stream())
+        .collect(Collectors.toList());
     }
 
     private void populateParameterNodes(List<Variable> variables) {
